--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Blueprint: On Scroll Effect Layout</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>SALVADOR</title>
 		<meta name="description" content="Blueprint: On Scroll Effect Layout" />
 		<meta name="keywords" content="on scroll, effect, slide in, layout, template, transition, javascript" />
 		<meta name="author" content="Codrops" />
 		<link rel="shortcut icon" href="../favicon.ico">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sorts+Mill+Goudy" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="js/modernizr.custom.js"></script>
@@ -16,38 +17,39 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
-				<h1>On Scroll Effect Layout</h1>
-				<nav>
-					<a href="http://tympanus.net/Blueprints/ResponsiveIconGrid/" class="bp-icon bp-icon-prev" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
-					<a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a>
-					<a href="http://tympanus.net/codrops/?p=15962" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
-					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
-				</nav>
-			</header>	
+				<span>DE ROALDES</span>
+				<h1>SALVADOR DALI I DOMENECH</h1>
+
+			</header>
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Lemon drops</h2>
-						<p>Fruitcake toffee jujubes. Topping biscuit sesame snaps jelly caramels jujubes tiramisu fruitcake. Marzipan tart lemon drops chocolate sesame snaps jelly beans.</p>
+						<h2>BIOGRAPHIE</h2>
+						<p>Salvador Felipe Jacinto Dalí y Doménech naît le 11 mai 1904 à Figueras, au nord de la Catalogne. La région de son enfance aura toujours une place privilégiée dans son œuvre comme dans sa vie. Très tôt, il manifeste une attirance pour l'art figuratif et la peinture, révélant déjà sa personnalité originale et inspirée. Il suit des cours particuliers de dessin.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/1.png" alt="img01">
 					</figure>
 				</section>
+
+
 				<section class="cbp-so-section">
 					<figure class="cbp-so-side cbp-so-side-left">
 						<img src="images/2.png" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Plum caramels</h2>
-						<p>Lollipop powder danish sugar plum caramels liquorice sweet cookie. Gummi bears caramels gummi bears candy canes cheesecake sweet roll icing dragée. Gummies jelly-o tart. Cheesecake unerdwear.com candy canes apple pie halvah chocolate tiramisu.</p>
+
+
+						<h2>DAL'IN LOVE</h2>
+						<p>Gala et Dali, c'est une histoire d'amour qui commence dès le premier regard, en 1929, et qui ne s'arrêtera qu'à la mort de la muse du fantasque peintre espagnol. Dali ne s'en est jamais relevé.
+						Il est l'artiste de génie. Elle incarne la muse par excellence. A eux deux, Gala et Dali forment l'un des couples les plus fusionnels du XXe siècle.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Marzipan gingerbread</h2>
-						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
+						<h2>SON ENFANCE</h2>
+						<p>"Toutes mes excentricités, toutes mes incohérences sont la constante tragique de ma vie [.] Je veux prouver que je ne suis pas le frère mort, mais le vivant", écrira-t-il.
+						Ses parents avaient perdu leur premier garçon, également prénommé Salvador. L'amour surprotecteur dont ils gratifièrent leur deuxième enfant a encouragé le développement d'un tempérament instable et égoïste.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/3.png" alt="img01">
@@ -58,14 +60,14 @@
 						<img src="images/4.png" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Carrot cake</h2>
-						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
+						<h2>1939-1945</h2>
+						<p>Pendant la Seconde Guerre mondiale, Dalí et Gala s'installent aux Etats-Unis. Ils y resteront jusqu'en 1948. Ces années ont été très importantes pour lui. Le musée d'Art moderne de New York offre à Dalí sa première exposition rétrospective en 1941. En 1942, Dalí publie son autobiographie, La Vie secrète. </p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Pudding lollipop</h2>
-						<p>Chupa chups pudding lollipop gummi bears gummies cupcake pie. Cookie cotton candy caramels. Oat cake dessert applicake. Sweet roll tiramisu sweet roll sweet roll.</p>
+						<h2>L'OEUVRE DALINIENNE</h2>
+						<p>Dalí est toujours plus prolifique : il écrit et illustre des livres, conçoit décors et costumes pour des opéras, tourne des films, élabore de nouvelles théories, sculpte, dessine, crée des bijoux et des meubles, mélange techniques artistiques, son génie n'a pas de limites dans l'art.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/5.png" alt="img01">
@@ -76,8 +78,8 @@
 						<img src="images/6.png" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Soufflé bonbon</h2>
-						<p>Cake cotton candy lollipop. Cake croissant cheesecake candy sugar plum icing apple pie wafer. Pie sugar plum tiramisu tiramisu pie fruitcake candy icing. Candy icing gummies gummies cheesecake brownie lemon drops chocolate gingerbread.</p>
+						<h2>LA FIN D'UN GEANT</h2>
+						<p>En 1974, Dalí inaugure le Teatro Museo Dalí à Figueras en Espagne. Cet événement a été suivi de rétrospectives à Paris et à Londres jusqu'à la fin de la décennie. Après la mort de son épouse, Gala, en 1982, la santé de Dalí commence à décliner.</p>
 					</article>
 				</section>
 			</div>
